2003-11-06  Mark Mitchell  <mark@codesourcery.com>

	* compiler_test.py (CompilerTest._RunExecutable): Add support for
	interpreters that take command-line arguments.  Record the command
	line used to invoke the interperter.

2003-09-15  Mark Mitchell  <mark@codesourcery.com>

	* compiler.py (TimeoutRedirectedExecutable.__init__): Remove
	debugging code.

2003-09-14  Mark Mitchell  <mark@codesourcery.com>

	* compiler.py (TimeoutRedirectedExecutable): New class.
	(CompilerExecutable): Inherit from it.
	(Compiler.Compile): Add timeout parameter.
	(Compiler.ExecuteCommand): Likewise.
	* compiler_test.py (CompiledExecutable): Inherit from
	TimeoutRedirectedExecutable.
	(CompilerTest.Run): Use timeouts.
	(CompilerTest._RunExecutable): Likewise.

2003-07-21  Mark Mitchell  <mark@codesourcery.com>

	* compiler_test.py (CompilerBase._GetDirectory): Do not use
	Database.GetLabelToPath.

2003-06-02  Mark Mitchell  <mark@codesourcery.com>

	* compiler.py (Compiler.MODE_PREPROCESS): New variable.
	(GPP): Rename to ...
	(GCC): ... this.
	(GCC.MODE_PRECOMPILE): New variable.
	(GCC.modes): Add it.
	* compiler_table.py: New file.
	* gcc_database.py: Remove.
	
	* classes.qmc: Add compiler_table.CompilerTable.  Remove
	gcc_database.DGTest.

2002-12-18  Mark Mitchell  <mark@codesourcery.com>

	* compiler_test.py (CompilerBase._QuoteForHTML): New method.
	(CompilerTest._CheckOutput): Use it.
	* gcc_database.py (GPPBprobTest): Likewise.
	
2002-12-13  Mark Mitchell  <mark@codesourcery.com>

	* compiler.py (Compiler.Compile): Use ...
	(Compiler.ExecuteCommand): ... this new method.
	* compiler_test.py (CompilerTest.Run): Record commands before
	trying to execute the compiler.
	* gcc_database.py (GPPBprobTest): Likewise.

2002-11-15    <Mark Mitchell <mark@codesourcery.com>>

	* compiler.py (resource): Don't import it under Windows.
	* compiler_test.py (CompilerTest._CheckStatus): Adjust handling
	for Windows.

2002-11-14  Mark Mitchell  <mark@codesourcery.com>
