@@ -1,3 +1,10 @@
+2004-03-31  Nathaniel Smith  <njs@codesourcery.com>
+
+	* compiler_test.py (CompilerBase._QuoteForHTML): Remove.
+	(CompilerTest._RunExecutable): Use 'Result.Quote'.
+	(CompilerTest._CheckOutput): Use 'Result.Quote'.
+	(CompilerTest._DiagnosticsToString): Use 'Result.Quote'.
+
 2003-11-06  Mark Mitchell  <mark@codesourcery.com>
 
 	* compiler_test.py (CompilerTest._RunExecutable): Add support for
